--- a/index.html
+++ b/index.html
@@ -1,4 +1,22 @@
- <!DOCTYPE html>
+
+
+<!-- 
+Author: Vincent Garreau - vincentgarreau.com  
+License: MIT - http://opensource.org/licenses/MIT  
+Demo/Generator: vincentgarreau.com/particles.js  
+GitHub: github.com/VincentGarreau/particles.js  
+Usage: Refer to the GitHub README for instructions  
+Version: 2.0.0  
+-->
+
+<!--
+  Book Preview v1.0.0 (https://github.com/vittorioPiotti/Book-Preview/releases/tag/1.0.0)
+  Copyright 2024 Vittorio Piotti
+  Licensed under GPL-3.0 (https://github.com/vittorioPiotti/Book-Preview/blob/main/LICENSE.md)
+-->
+
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
